--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,8 @@
   },
   "require-dev": {
     "fakerphp/faker": "^1.23",
+    "laravel/breeze": "*",
     "laravel/pail": "^1.2.2",
-    "laravel/pint": "^1.24",
     "laravel/sail": "^1.41",
     "mockery/mockery": "^1.6",
     "nunomaduro/collision": "^8.6",
